tests/sksl/errors/MatrixInlinedIndexOutOfRange.glsl
### Compilation failed:

error: 11: index -1 out of range for 'float3x3'
    float3 undefined = indexMatrix(-1) + indexMatrix(3);
                       ^^^^^^^^^^^^^^^
error: 11: index 3 out of range for 'float3x3'
    float3 undefined = indexMatrix(-1) + indexMatrix(3);
                                         ^^^^^^^^^^^^^^
2 errors
